altynasyr fix2
